--- a/.github/workflows/WSA-GA-Actions.yml
+++ b/.github/workflows/WSA-GA-Actions.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
     - name: Workflow Run
       run: |
-            git clone https://github.com/WSA-Community/WSAGAScript
+            git clone -b fix-login-1.8.32828 https://github.com/Coxxs/WSAGAScript
             gapps_type=${{github.event.inputs.gapps_type}} && gapps_type=${gapps_type,,}
             arch="${{github.event.inputs.architecture}}"
             if [ ${arch,,} == 'x64' ]; then arch='x86_64'; fi
